# Embodied-Intelligence

./: .gitignore  LICENSE  README.md
assignment1/: README.md
assignment1/ros_ws/devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
assignment1/ros_ws/devel/lib/assignment1/: scan_listener
assignment1/ros_ws/devel/lib/pkgconfig/: assignment1.pc
assignment1/ros_ws/devel/share/assignment1/cmake/: assignment1Config.cmake
assignment1/ros_ws/src/assignment1/: package.xml
assignment1/ros_ws/src/assignment1/src/: main.cpp
assignment2/: Q1-Umwelt_of_an_animal.md
assignment3/: README.md  autopoietic_system.py
ros_ws/devel/: .catkin  .rosinstall  setup.sh
ros_ws/devel/lib/assignment1/: scan_listener
ros_ws/devel/lib/pkgconfig/: assignment1.pc
ros_ws/devel/share/assignment1/cmake/: assignment1Config.cmake
ros_ws/src/assignment1/: CMakeLists.txt
ros_ws/src/assignment1/src/: main.cpp
